# fastapiBeanie

./: .gitignore  pyproject.toml
app/server/: app.py  database.py
app/server/models/: product_review.py
app/server/routes/: product_review.py
